# CI-learning-plan

./: .gitignore  Makefile  README.md  ci-learning-plan.md  pyproject.toml  requirements.txt
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml
src/app/: main.py  routes.py
tests/: test_app.py
